[resource/postgres_session] add integration tests, change error handling
WIP :warning:

this makes it work (tested with default-ubuntu-1404), but doesn't
improve the error handling (i.e., the skip_resource doesn't really
prevent the failure)

--- a/test/integration/.kitchen.yml
+++ b/test/integration/.kitchen.yml
@@ -43,3 +43,6 @@ suites:
     run_list:
       - recipe[os_prepare]
     attributes:
+      postgresql:
+        password:
+          postgres: md506be11be01439cb4abd537e454df34ea # 'inspec'
